--- a/landing page.html/galeria.html
+++ b/landing page.html/galeria.html
@@ -7,18 +7,20 @@
     <title>imagenes</title>
 </head>
 <body>
-    <nav><a href="../landing page.html/index.html">volver</a></nav>
+    <nav><a class="botom2" href="../landing page.html/index.html">volver</a></nav>          
+    <header class="cuadrado">
     <h1 class="albums">“The best albums of all time</h1>
     <picture class="imagenes">
         <img src="../img/OIP (1).webp" alt="">
-        
         <img src="../img/OIP (2).webp" alt="">
         <img src="../img/OIP.webp" alt="">
-    </picture>
-    <section class="texto">
+        <section class="texto">
         <p>tyler the creator</p>
+        audi
         <p>kendrick lamar</p>
         <p>travist scott</p>
     </section>
+    </picture>
+    </header>
 </body>
 </html>
